--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
     "firebase": "^11.0.1",
+    "openai": "^4.68.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image-file-resizer": "^0.4.8",
