--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image-file-resizer": "^0.4.8",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
