--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,11 @@
     "react-dom": "^18.3.1",
     "react-image-file-resizer": "^0.4.8",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "rehype-highlight": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
